<resources>
    <string name="app_settings">APP_SETTINGS</string>
    <string name="app_name">MarkScanner-ITMO</string>
    <string name="app_description">MarkScanner - неофициальное приложение для проверки кодов маркировки</string>
    <string name="scan">Сканировать</string>
    <string name="check_input_code">Проверить введённый код</string>
    <string name="input_code_hint">КИ/КМ</string>
    <string name="or">или</string>
    <string name="result">Результат сканирования</string>
    <string name="making_request">Делаем запрос к ЧЗ…</string>
    <string name="please_wait">Пожалуйста, подождите.</string>
    <string name="full_result">Ответ ЧЗ (JSON)</string>
    <string name="update_result">Обновить статус</string>
    <string name="scan_history">История сканирований</string>
    <string name="exit">Выход</string>
    <string name="settings">Настройки</string>
    <string name="mobile_api">Mobile API (без авторизации)</string>
    <string name="true_api">True API (по токену)</string>
    <string name="token_url">URL токена</string>
    <string name="auth_needed">Необходима авторизация</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="update">Обновить</string>
</resources>